[CPDLP-3338] MVP NPQ Prep - Add missing funded place to NPQ applications csv (#1552)
